# dab-server

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  Screenshot_2018-11-27-18-13-39.png~  Screenshot_2018-11-30-18-44-58.jpg~  command.sh  config.cpp  config.h  device-handler.cpp  device-handler.h  main.cpp  protocol.h  radiodata.h
10-inch/app/: build.gradle
10-inch/app/src/androidTest/java/com/example/jan/dabradio/: ExampleInstrumentedTest.java
10-inch/app/src/main/java/com/example/jan/dabradio/: MainActivity.java  radioInterface.java
10-inch/app/src/main/res/layout/: activity_main.xml
5-inch/app/src/main/: AndroidManifest.xml
5-inch/app/src/main/java/com/example/jan/dabradio/: MainActivity.java  Signals.java  radioInterface.java
5-inch/app/src/main/res/layout/: activity_main.xml
5-inch/app/src/main/res/values/: strings.xml
5-inch/app/src/test/java/com/example/jan/dabradio/: ExampleUnitTest.java
android client/app/src/main/: AndroidManifest.xml
android client/app/src/main/java/com/example/jan/dabradio/: MainActivity.java  Signals.java  radioInterface.java
android client/app/src/main/res/layout/: activity_main.xml
devices/: device-handler.cpp  device-handler.h
devices/airspy-handler/: airspy-handler.cpp  airspy-handler.h
devices/hackrf-handler/: hackrf-handler.cpp  hackrf-handler.h
devices/rtlsdr-handler/: rtlsdr-handler.cpp  rtlsdr-handler.h
devices/sdrplay-handler/: sdrplay-handler.cpp  sdrplay-handler.h
includes/: dab-processor.h
includes/backend/: audio-backend.h
includes/backend/audio/: faad-decoder.h  mp2processor.h  mp4processor.h
includes/backend/data/: pad-handler.h  tdc-datahandler.h
includes/backend/data/mot/: mot-dir.h  mot-handler.h
includes/ofdm/: ofdm-decoder.h  sample-reader.h
includes/support/: newconverter.h
java-client/: DabClient.java  README  main.cpp
java-client/bluetooth/: RemoteDeviceDiscovery.java  ServicesSearch.java
java-client/controller/: ClientController.java
java-client/model/: ClientModel.java  modelSignals.java
java-client/viewer/: ClientView.java  viewSignals.java
radio/: config.cpp  dab-decoder.cpp  dab-decoder.h
radio/includes/: dab-constants.h  dab-processor.h
radio/includes/backend/: data-backend.h  msc-handler.h
radio/includes/backend/audio/: faad-decoder.h
radio/includes/backend/data/: data-processor.h
radio/includes/backend/data/mot/: mot-object.h
radio/includes/ofdm/: fib-processor.h  fic-handler.h  freq-interleaver.h  ofdm-decoder.h  phasereference.h  phasetable.h  sample-reader.h  timesyncer.h
radio/includes/support/: eep-protection.h  fft_handler.h  protection.h  viterbi-handler.h
radio/src/: dab-processor.cpp
radio/src/backend/: audio-backend.cpp  backend-base.cpp  charsets.cpp  data-backend.cpp  galois.cpp  msc-handler.cpp  virtual-backend.cpp
radio/src/backend/audio/: faad-decoder.cpp  mp4processor.cpp
radio/src/backend/data/: data-processor.cpp  ip-datahandler.cpp  pad-handler.cpp  tdc-datahandler.cpp  virtual-datahandler.cpp
radio/src/backend/data/mot/: mot-handler.cpp  mot-object.cpp
radio/src/ofdm/: fib-processor.cpp  fic-handler.cpp  freq-interleaver.cpp  ofdm-decoder.cpp  phasereference.cpp  phasetable.cpp  sample-reader.cpp  timesyncer.cpp
radio/src/support/: band-handler.cpp  fft_handler.cpp  newconverter.cpp  protection.cpp  uep-protection.cpp  viterbi-handler.cpp
sdrplay-handler/: sdrplay-handler.cpp  sdrplay-handler.h
speeltje/app/: build.gradle
speeltje/app/src/androidTest/java/com/example/jan/speeltje/: ExampleInstrumentedTest.java
speeltje/app/src/main/: AndroidManifest.xml
speeltje/app/src/main/java/com/example/jan/speeltje/: MainActivity.java
speeltje/app/src/main/res/layout/: activity_main.xml
speeltje/app/src/main/res/values/: strings.xml
speeltje/app/src/test/java/com/example/jan/speeltje/: ExampleUnitTest.java
src/: dab-processor.cpp
src/backend/audio/: faad-decoder.cpp  mp4processor.cpp
src/ofdm/: ofdm-decoder.cpp  sample-reader.cpp
